database: Update imports to use `adalflow` instead of `lightrag`

--- a/tutorials/database.ipynb
+++ b/tutorials/database.ipynb
@@ -75,7 +75,7 @@
    ],
    "source": [
     "# create Document objects\n",
-    "from lightrag.core.types import Document\n",
+    "from adalflow.core.types import Document\n",
     "\n",
     "# we will save the content to text and title in the meta_data\n",
     "documents  = [Document(text=doc['content'], meta_data={'title': doc['title']}) for doc in org_documents]\n",
@@ -98,7 +98,7 @@
    "source": [
     "# create DialogTurn objects\n",
     "\n",
-    "from lightrag.core.types import DialogTurn, UserQuery, AssistantResponse\n",
+    "from adalflow.core.types import DialogTurn, UserQuery, AssistantResponse\n",
     "\n",
     "dialog_turns = [\n",
     "    DialogTurn(\n",
@@ -151,10 +151,10 @@
    "source": [
     "# prepare the data pipeline\n",
     "\n",
-    "from lightrag.core.embedder import Embedder \n",
-    "from lightrag.core.types import ModelClientType\n",
-    "from lightrag.components.data_process import DocumentSplitter, ToEmbeddings\n",
-    "from lightrag.core.component import Sequential\n",
+    "from adalflow.core.embedder import Embedder \n",
+    "from adalflow.core.types import ModelClientType\n",
+    "from adalflow.components.data_process import DocumentSplitter, ToEmbeddings\n",
+    "from adalflow.core.component import Sequential\n",
     "\n",
     "\n",
     "model_kwargs = {\n",
@@ -302,7 +302,7 @@
    ],
    "source": [
     "# create a db for the dialog_turns\n",
-    "from lightrag.core.db import LocalDB\n",
+    "from adalflow.core.db import LocalDB\n",
     "\n",
     "dialog_turn_db = LocalDB('dialog_turns')\n",
     "print(dialog_turn_db)\n",
@@ -539,7 +539,7 @@
    "source": [
     "# prepare the generator for the dialog turns \n",
     "\n",
-    "from lightrag.core import Generator\n",
+    "from adalflow.core import Generator\n",
     "\n",
     "llm_kwargs = {\n",
     "    \"model\": \"gpt-3.5-turbo\"\n",
@@ -814,7 +814,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from lightrag.components.retriever.faiss_retriever import FAISSRetriever\n",
+    "from adalflow.components.retriever.faiss_retriever import FAISSRetriever\n",
     "\n",
     "retriever = FAISSRetriever(top_k=3, embedder=embedder)"
    ]
@@ -860,7 +860,7 @@
    ],
    "source": [
     "# we will use the retriever to find top_k chunked documents, from its partent_doc_id, we will find the initial dialog_turn, and feed that to the generator\n",
-    "from lightrag.utils.logger import get_logger\n",
+    "from adalflow.utils.logger import get_logger\n",
     "get_logger()\n",
     "\n",
     "embeddings = [item.vector for item in dialog_turn_db.transformed_items[key]]\n",
