chore: Update imports to use `adalflow` instead of `lightrag`

--- a/tutorials/embedder.ipynb
+++ b/tutorials/embedder.ipynb
@@ -13,9 +13,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from lightrag.core.embedder import Embedder\n",
-    "from lightrag.components.model_client import OpenAIClient\n",
-    "from lightrag.utils import setup_env # ensure you setup OPENAI_API_KEY in your project .env file\n",
+    "from adalflow.core.embedder import Embedder\n",
+    "from adalflow.components.model_client import OpenAIClient\n",
+    "from adalflow.utils import setup_env # ensure you setup OPENAI_API_KEY in your project .env file\n",
     "\n",
     "model_kwargs = {\n",
     "    \"model\": \"text-embedding-3-small\",\n",
@@ -147,9 +147,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from lightrag.core.embedder import Embedder\n",
-    "from lightrag.components.model_client import TransformersClient\n",
-    "# from lightrag.utils import enable_library_logging\n",
+    "from adalflow.core.embedder import Embedder\n",
+    "from adalflow.components.model_client import TransformersClient\n",
+    "# from adalflow.utils import enable_library_logging\n",
     "\n",
     "# enable_library_logging(level=\"DEBUG\")\n",
     "\n",
@@ -483,7 +483,7 @@
     }
    ],
    "source": [
-    "from lightrag.core.embedder import BatchEmbedder\n",
+    "from adalflow.core.embedder import BatchEmbedder\n",
     "\n",
     "batch_embedder = BatchEmbedder(embedder=local_embedder, batch_size=100)\n",
     "\n",
@@ -504,10 +504,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from lightrag.core.types import Embedding\n",
-    "from lightrag.core.functional import normalize_vector\n",
+    "from adalflow.core.types import Embedding\n",
+    "from adalflow.core.functional import normalize_vector\n",
     "from typing import List\n",
-    "from lightrag.core.component import Component\n",
+    "from adalflow.core.component import Component\n",
     "from copy import deepcopy\n",
     "class DecreaseEmbeddingDim(Component):\n",
     "    def __init__(self, old_dim: int, new_dim: int,  normalize: bool = True):\n",
