--- a/tutorials/generator.ipynb
+++ b/tutorials/generator.ipynb
@@ -43,9 +43,9 @@
     }
    ],
    "source": [
-    "from lightrag.core import Generator\n",
-    "from lightrag.components.model_client import OpenAIClient, get_all_messages_content, get_probabilities\n",
-    "from lightrag.utils import enable_library_logging\n",
+    "from adalflow.core import Generator\n",
+    "from adalflow.components.model_client import OpenAIClient, get_all_messages_content, get_probabilities\n",
+    "from adalflow.utils import enable_library_logging\n",
     "\n",
     "enable_library_logging(level=\"DEBUG\")\n",
     "\n",
@@ -86,9 +86,9 @@
     }
    ],
    "source": [
-    "from lightrag.core import Component, Generator, Prompt\n",
-    "from lightrag.components.model_client import GroqAPIClient\n",
-    "from lightrag.utils import setup_env # noqa\n",
+    "from adalflow.core import Component, Generator, Prompt\n",
+    "from adalflow.components.model_client import GroqAPIClient\n",
+    "from adalflow.utils import setup_env # noqa\n",
     "\n",
     "\n",
     "class SimpleQA(Component):\n",
