--- a/tutorials/tools.ipynb
+++ b/tutorials/tools.ipynb
@@ -17,7 +17,7 @@
    "source": [
     "from openai import OpenAI\n",
     "import json\n",
-    "from lightrag.utils import setup_env\n",
+    "from adalflow.utils import setup_env\n",
     "\n",
     "client = OpenAI()\n",
     "\n",
@@ -172,7 +172,7 @@
    "source": [
     "# describing the functions\n",
     "\n",
-    "from lightrag.core.func_tool import FunctionTool\n",
+    "from adalflow.core.func_tool import FunctionTool\n",
     "\n",
     "functions =[multiply, add, divide, search, numpy_sum, add_points]\n",
     "tools = [\n",
@@ -273,7 +273,7 @@
    "source": [
     "# to further help us manage the whole process, we will use a tool manager\n",
     "\n",
-    "from lightrag.core.tool_manager import ToolManager\n",
+    "from adalflow.core.tool_manager import ToolManager\n",
     "\n",
     "tool_manager = ToolManager(tools=functions)\n",
     "print(tool_manager)"
@@ -672,7 +672,7 @@
    ],
    "source": [
     "# let's see how the template can be rendered with tools\n",
-    "from lightrag.core.prompt_builder import Prompt\n",
+    "from adalflow.core.prompt_builder import Prompt\n",
     "\n",
     "prompt = Prompt(template=template)\n",
     "small_tool_manager = ToolManager(tools=tools[:2])\n",
@@ -708,7 +708,7 @@
    "source": [
     "# let's render the output format using Function class \n",
     "\n",
-    "from lightrag.core.types import Function\n",
+    "from adalflow.core.types import Function\n",
     "\n",
     "\n",
     "output_data_class = Function \n",
@@ -742,7 +742,7 @@
    ],
    "source": [
     "# use FunctionExpression\n",
-    "from lightrag.core.types import FunctionExpression\n",
+    "from adalflow.core.types import FunctionExpression\n",
     "\n",
     "output_data_class = FunctionExpression\n",
     "output_format_str = output_data_class.to_json_signature(exclude=[\"thought\"])\n",
@@ -775,7 +775,7 @@
    "source": [
     "# let's adds more instruction and this time, we will use JsonOutputParser\n",
     "\n",
-    "from lightrag.components.output_parsers import JsonOutputParser\n",
+    "from adalflow.components.output_parsers import JsonOutputParser\n",
     "\n",
     "func_parser = JsonOutputParser(data_class=Function)\n",
     "instructions = func_parser.format_instructions(exclude=[\"thought\"])\n",
@@ -841,8 +841,8 @@
    ],
    "source": [
     "# create the generator\n",
-    "from lightrag.core.generator import Generator\n",
-    "from lightrag.core.types import ModelClientType\n",
+    "from adalflow.core.generator import Generator\n",
+    "from adalflow.core.types import ModelClientType\n",
     "\n",
     "model_kwargs = {\"model\": \"gpt-3.5-turbo\"}\n",
     "prompt_kwargs = {\n",
@@ -1105,7 +1105,7 @@
    "source": [
     "# let's use FunctionExpression to call the function instead \n",
     "\n",
-    "from lightrag.core.types import FunctionExpression\n",
+    "from adalflow.core.types import FunctionExpression\n",
     "\n",
     "output_data_class = FunctionExpression\n",
     "output_format_str = output_data_class.to_yaml_signature(exclude=[\"thought\"])\n",
@@ -1787,8 +1787,8 @@
    "source": [
     "queries = [\"add 2 and 3\", \"search for something\", \"add points (1, 2) and (3, 4)\", \"sum numpy array with arr = np.array([[1, 2], [3, 4]])\", \"multiply 2 with local variable x\", \"divide 2 by 3\"]\n",
     "\n",
-    "from lightrag.components.output_parsers import ListOutputParser\n",
-    "from lightrag.core.string_parser import JsonParser # improve a list of json\n",
+    "from adalflow.components.output_parsers import ListOutputParser\n",
+    "from adalflow.core.string_parser import JsonParser # improve a list of json\n",
     "\n",
     "preset_prompt_kwargs = {\n",
     "        \"tools\": [tool.definition.to_yaml() for tool in tools],\n",
@@ -1983,7 +1983,7 @@
     "\n",
     "from openai import OpenAI\n",
     "from openai.types import FunctionDefinition\n",
-    "from lightrag.utils import setup_env\n",
+    "from adalflow.utils import setup_env\n",
     "import json\n",
     "\n",
     "client = OpenAI()\n",
@@ -2144,7 +2144,7 @@
    "source": [
     "# v2\n",
     "\n",
-    "from lightrag.core.base_data_class import DataClass\n",
+    "from adalflow.core.base_data_class import DataClass\n",
     "from dataclasses import dataclass, field\n",
     "\n",
     "@dataclass\n",
@@ -2242,7 +2242,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lightrag_fn_schema =\n",
+    "adalflow_fn_schema =\n",
     "{\n",
     "        \"type\": \"object\",\n",
     "        \"properties\": {\n",
@@ -2443,9 +2443,9 @@
     "    \"\"\"\n",
     "\n",
     "from typing import Dict, Any\n",
-    "from lightrag.core.generator import Generator\n",
-    "from lightrag.core.types import ModelClientType\n",
-    "from lightrag.components.output_parsers import YamlOutputParser\n",
+    "from adalflow.core.generator import Generator\n",
+    "from adalflow.core.types import ModelClientType\n",
+    "from adalflow.components.output_parsers import YamlOutputParser\n",
     "\n",
     "model_kwargs = {\"model\": \"gpt-3.5-turbo\", \"temperature\": 0.3, \"stream\": False}\n",
     "\n",
