add RAG docs and notebook

--- a/notebooks/rag/adalflow_rag_eval.ipynb
+++ b/notebooks/rag/adalflow_rag_eval.ipynb
@@ -4,7 +4,58 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Build a Simple Retrieval-Augmented Generation (RAG) Pipeline"
+    "# 🤗 Welcome to AdalFlow!\n",
+    "## The PyTorch library to auto-optimize any LLM task pipelines\n",
+    "\n",
+    "Thanks for trying us out, we're here to provide you with the best LLM application development experience you can dream of 😊 any questions or concerns you may have, [come talk to us on discord,](https://discord.gg/ezzszrRZvT) we're always here to help! ⭐ <i>Star us on <a href=\"https://github.com/SylphAI-Inc/AdalFlow\">Github</a> </i> ⭐\n",
+    "\n",
+    "\n",
+    "# Quick Links\n",
+    "\n",
+    "Github repo: https://github.com/SylphAI-Inc/AdalFlow\n",
+    "\n",
+    "Full Tutorials: https://adalflow.sylph.ai/index.html#.\n",
+    "\n",
+    "Deep dive on each API: check out the [developer notes](https://adalflow.sylph.ai/tutorials/index.html).\n",
+    "\n",
+    "Common use cases along with the auto-optimization:  check out [Use cases](https://adalflow.sylph.ai/use_cases/index.html).\n",
+    "\n",
+    "# Outline\n",
+    "\n",
+    "This notebook will cover a RAG task pipeline that works hand to hand with our [LocalDB]() to answer [hotpotqa](https://hotpotqa.github.io/) questions. This one in particular focus on evaluation metrics on the unoptimized pipeline.\n",
+    "\n",
+    "* Simple Chatbot with structured output\n",
+    "* RAG task pipeline + Data processing pipeline\n",
+    "* Agent\n",
+    "\n",
+    "**Next: Try our [auto-optimization](https://colab.research.google.com/drive/1n3mHUWekTEYHiBdYBTw43TKlPN41A9za?usp=sharing)**\n",
+    "\n",
+    "\n",
+    "# Installation\n",
+    "\n",
+    "1. Use `pip` to install the `adalflow` Python package. We will need `openai`, and `faiss`(cpu version) from the extra packages.\n",
+    "\n",
+    "  ```bash\n",
+    "  pip install adalflow[openai,faiss-cpu]\n",
+    "  ```\n",
+    "1. Setup  `openai` API key in the environment variables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Build a Simple Retrieval-Augmented Generation (RAG) Pipeline\n",
+    "\n",
+    "TODO: automatically update the colab content when the notebook is updated\n",
+    "[Colab link](https://colab.research.google.com/drive/1k4gfwjhrWK7rae4DDZWOhfOxb0Bd_HV3?usp=sharing)"
    ]
   },
   {
@@ -407,9 +458,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "lightrag-project",
+   "display_name": "my-project-kernel",
    "language": "python",
-   "name": "light-rag-project"
+   "name": "my-project-kernel"
   },
   "language_info": {
    "codemirror_mode": {
@@ -421,7 +472,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
