--- a/notebooks/rag/adalflow_rag_eval.ipynb
+++ b/notebooks/rag/adalflow_rag_eval.ipynb
@@ -43,10 +43,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing /Users/liyin/Documents/test/LightRAG/adalflow/dist/adalflow-0.2.1-py3-none-any.whl\n",
+      "Requirement already satisfied: backoff<3.0.0,>=2.2.1 in /Users/liyin/Documents/test/LightRAG/.venv/lib/python3.12/site-packages (from adalflow==0.2.1) (2.2.1)\n",
+      "Requirement already satisfied: botocore<2.0.0,>=1.34.149 in /Users/liyin/Documents/test/LightRAG/.venv/lib/python3.12/site-packages (from adalflow==0.2.1) (1.34.157)\n",
+      "Requirement already satisfied: diskcache<6.0.0,>=5.6.3 in /Users/liyin/Documents/test/LightRAG/.venv/lib/python3.12/site-packages (from adalflow==0.2.1) (5.6.3)\n",
+      "Requirement already satisfied: jinja2<4.0.0,>=3.1.3 in /Users/liyin/Documents/test/LightRAG/.venv/lib/python3.12/site-packages (from adalflow==0.2.1) (3.1.4)\n",
+      "Requirement already satisfied: jsonlines<5.0.0,>=4.0.0 in /Users/liyin/Documents/test/LightRAG/.venv/lib/python3.12/site-packages (from adalflow==0.2.1) (4.0.0)\n",
+      "Requirement already satisfied: nest-asyncio<2.0.0,>=1.6.0 in /Users/liyin/Documents/test/LightRAG/.venv/lib/python3.12/site-packages (from adalflow==0.2.1) (1.6.0)\n",
+      "Requirement already satisfied: numpy<2.0.0,>=1.26.4 in /Users/liyin/Documents/test/LightRAG/.venv/lib/python3.12/site-packages (from adalflow==0.2.1) (1.26.4)\n",
+      "Requirement already satisfied: python-dotenv<2.0.0,>=1.0.1 in /Users/liyin/Documents/test/LightRAG/.venv/lib/python3.12/site-packages (from adalflow==0.2.1) (1.0.1)\n",
+      "Requirement already satisfied: pyyaml<7.0.0,>=6.0.1 in /Users/liyin/Documents/test/LightRAG/.venv/lib/python3.12/site-packages (from adalflow==0.2.1) (6.0.2)\n",
+      "Requirement already satisfied: tiktoken<0.8.0,>=0.7.0 in /Users/liyin/Documents/test/LightRAG/.venv/lib/python3.12/site-packages (from adalflow==0.2.1) (0.7.0)\n",
+      "Requirement already satisfied: tqdm<5.0.0,>=4.66.4 in /Users/liyin/Documents/test/LightRAG/.venv/lib/python3.12/site-packages (from adalflow==0.2.1) (4.66.5)\n",
+      "Requirement already satisfied: jmespath<2.0.0,>=0.7.1 in /Users/liyin/Documents/test/LightRAG/.venv/lib/python3.12/site-packages (from botocore<2.0.0,>=1.34.149->adalflow==0.2.1) (1.0.1)\n",
+      "Requirement already satisfied: python-dateutil<3.0.0,>=2.1 in /Users/liyin/Documents/test/LightRAG/.venv/lib/python3.12/site-packages (from botocore<2.0.0,>=1.34.149->adalflow==0.2.1) (2.9.0.post0)\n",
+      "Requirement already satisfied: urllib3!=2.2.0,<3,>=1.25.4 in /Users/liyin/Documents/test/LightRAG/.venv/lib/python3.12/site-packages (from botocore<2.0.0,>=1.34.149->adalflow==0.2.1) (2.2.2)\n",
+      "Requirement already satisfied: MarkupSafe>=2.0 in /Users/liyin/Documents/test/LightRAG/.venv/lib/python3.12/site-packages (from jinja2<4.0.0,>=3.1.3->adalflow==0.2.1) (2.1.5)\n",
+      "Requirement already satisfied: attrs>=19.2.0 in /Users/liyin/Documents/test/LightRAG/.venv/lib/python3.12/site-packages (from jsonlines<5.0.0,>=4.0.0->adalflow==0.2.1) (24.2.0)\n",
+      "Requirement already satisfied: regex>=2022.1.18 in /Users/liyin/Documents/test/LightRAG/.venv/lib/python3.12/site-packages (from tiktoken<0.8.0,>=0.7.0->adalflow==0.2.1) (2024.7.24)\n",
+      "Requirement already satisfied: requests>=2.26.0 in /Users/liyin/Documents/test/LightRAG/.venv/lib/python3.12/site-packages (from tiktoken<0.8.0,>=0.7.0->adalflow==0.2.1) (2.32.3)\n",
+      "Requirement already satisfied: six>=1.5 in /Users/liyin/Documents/test/LightRAG/.venv/lib/python3.12/site-packages (from python-dateutil<3.0.0,>=2.1->botocore<2.0.0,>=1.34.149->adalflow==0.2.1) (1.16.0)\n",
+      "Requirement already satisfied: charset-normalizer<4,>=2 in /Users/liyin/Documents/test/LightRAG/.venv/lib/python3.12/site-packages (from requests>=2.26.0->tiktoken<0.8.0,>=0.7.0->adalflow==0.2.1) (3.3.2)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in /Users/liyin/Documents/test/LightRAG/.venv/lib/python3.12/site-packages (from requests>=2.26.0->tiktoken<0.8.0,>=0.7.0->adalflow==0.2.1) (3.7)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /Users/liyin/Documents/test/LightRAG/.venv/lib/python3.12/site-packages (from requests>=2.26.0->tiktoken<0.8.0,>=0.7.0->adalflow==0.2.1) (2024.7.4)\n",
+      "Installing collected packages: adalflow\n",
+      "  Attempting uninstall: adalflow\n",
+      "    Found existing installation: adalflow 0.2.0b1\n",
+      "    Uninstalling adalflow-0.2.0b1:\n",
+      "      Successfully uninstalled adalflow-0.2.0b1\n",
+      "Successfully installed adalflow-0.2.1\n",
+      "\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m24.1.2\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m24.2\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install /Users/liyin/Documents/test/LightRAG/adalflow/dist/adalflow-0.2.1-py3-none-any.whl"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -458,9 +499,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "my-project-kernel",
+   "display_name": "lightrag-project",
    "language": "python",
-   "name": "my-project-kernel"
+   "name": "light-rag-project"
   },
   "language_info": {
    "codemirror_mode": {
