--- a/notebooks/evaluation/adalflow_llm_eval.ipynb
+++ b/notebooks/evaluation/adalflow_llm_eval.ipynb
@@ -53,20 +53,7 @@
    "source": [
     "from IPython.display import clear_output\n",
     "\n",
-    "!pip install -U adalflow[openai,groq,faiss-cpu]\n",
-    "\n",
-    "clear_output()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from IPython.display import clear_output\n",
-    "\n",
-    "!pip install \"/Users/liyin/Documents/test/LightRAG/adalflow/dist/adalflow-0.2.1-py3-none-any.whl[openai]\"\n",
+    "!pip install -U adalflow[openai]\n",
     "\n",
     "clear_output()"
    ]
