use official package

--- a/notebooks/evaluation/adalflow_llm_eval.ipynb
+++ b/notebooks/evaluation/adalflow_llm_eval.ipynb
@@ -51,6 +51,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# ensure version >= v0.2.1\n",
     "from IPython.display import clear_output\n",
     "\n",
     "!pip install -U adalflow[openai]\n",
