updated imports to adalflow

--- a/tutorials/generator.ipynb
+++ b/tutorials/generator.ipynb
@@ -74,17 +74,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "GeneratorOutput(data='LightRAG is a light-based Real-time Anomaly Generator, which is a special type of anomaly detection system. It uses a combination of visual and statistical techniques to detect unusual patterns or outliers in a dataset in real-time, often for purposes such as identifying security threats, detecting fraud, or monitoring system performance. Would you like to know more about its applications or how it works?', error=None, usage=None, raw_response='LightRAG is a light-based Real-time Anomaly Generator, which is a special type of anomaly detection system. It uses a combination of visual and statistical techniques to detect unusual patterns or outliers in a dataset in real-time, often for purposes such as identifying security threats, detecting fraud, or monitoring system performance. Would you like to know more about its applications or how it works?')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from adalflow.core import Component, Generator, Prompt\n",
     "from adalflow.components.model_client import GroqAPIClient\n",
@@ -112,7 +104,7 @@
     "\n",
     "\n",
     "qa = SimpleQA()\n",
-    "answer = qa(\"What is LightRAG?\")\n",
+    "answer = qa(\"What is AdalFLow?\")\n",
     "\n",
     "print(answer)"
    ]
