--- a/tutorials/model_client.ipynb
+++ b/tutorials/model_client.ipynb
@@ -24,9 +24,9 @@
     }
    ],
    "source": [
-    "from lightrag.components.model_client import OpenAIClient\n",
-    "from lightrag.core.types import ModelType\n",
-    "from lightrag.utils import setup_env\n",
+    "from adalflow.components.model_client import OpenAIClient\n",
+    "from adalflow.core.types import ModelType\n",
+    "from adalflow.utils import setup_env\n",
     "\n",
     "openai_client = OpenAIClient()\n",
     "\n",
