--- a/tutorials/rag.ipynb
+++ b/tutorials/rag.ipynb
@@ -16,10 +16,10 @@
    "outputs": [],
    "source": [
     "# the data pipeline and the backend data processing\n",
-    "from lightrag.core.embedder import Embedder \n",
-    "from lightrag.core.types import ModelClientType\n",
-    "from lightrag.components.data_process import TextSplitter, ToEmbeddings\n",
-    "from lightrag.core.container import Sequential\n",
+    "from adalflow.core.embedder import Embedder \n",
+    "from adalflow.core.types import ModelClientType\n",
+    "from adalflow.components.data_process import TextSplitter, ToEmbeddings\n",
+    "from adalflow.core.container import Sequential\n",
     "\n",
     "def prepare_data_pipeline():\n",
     "    model_kwargs = {\n",
