--- a/tutorials/retriever.ipynb
+++ b/tutorials/retriever.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We start with high-precision and high-recall retrieval methods as LightRAG helps you optimize the later stage of your search/retrieval pipeline. As the first stage is often comes with cloud db providers with their search and filter support."
+    "We start with high-precision and high-recall retrieval methods as AdalFlow helps you optimize the later stage of your search/retrieval pipeline. As the first stage is often comes with cloud db providers with their search and filter support."
    ]
   },
   {
@@ -67,8 +67,8 @@
    ],
    "source": [
     "# create an embedder\n",
-    "from lightrag.core.embedder import Embedder \n",
-    "from lightrag.core.types import ModelClientType\n",
+    "from adalflow.core.embedder import Embedder \n",
+    "from adalflow.core.types import ModelClientType\n",
     "\n",
     "\n",
     "model_kwargs = {\n",
@@ -126,7 +126,7 @@
    "source": [
     "# prepare the retriever\n",
     "\n",
-    "from lightrag.components.retriever import FAISSRetriever\n",
+    "from adalflow.components.retriever import FAISSRetriever\n",
     "\n",
     "# pass the documents in the initialization \n",
     "documents_embeddings = [x.embedding for x in output.data]\n",
@@ -225,7 +225,7 @@
     }
    ],
    "source": [
-    "from lightrag.components.retriever import BM25Retriever\n",
+    "from adalflow.components.retriever import BM25Retriever\n",
     "\n",
     "document_map_func = lambda x: x[\"content\"]\n",
     "\n",
@@ -250,7 +250,7 @@
    "source": [
     "# show how a word splitter and a token splitter differs\n",
     "\n",
-    "from lightrag.components.retriever.bm25_retriever import split_text_by_word_fn_then_lower_tokenized, split_text_by_word_fn\n",
+    "from adalflow.components.retriever.bm25_retriever import split_text_by_word_fn_then_lower_tokenized, split_text_by_word_fn\n",
     "\n",
     "query_1_words = split_text_by_word_fn(query_1)\n",
     "query_1_tokens = split_text_by_word_fn_then_lower_tokenized(query_1)\n",
@@ -394,7 +394,7 @@
     }
    ],
    "source": [
-    "from lightrag.components.retriever import RerankerRetriever\n",
+    "from adalflow.components.retriever import RerankerRetriever\n",
     "\n",
     "model_client = ModelClientType.COHERE()\n",
     "model_kwargs = {\"model\": \"rerank-english-v3.0\"}\n",
@@ -609,7 +609,7 @@
     }
    ],
    "source": [
-    "from lightrag.components.retriever import LLMRetriever\n",
+    "from adalflow.components.retriever import LLMRetriever\n",
     "\n",
     "model_client = ModelClientType.OPENAI()\n",
     "model_kwargs = {\n",
@@ -722,17 +722,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: fsspec in /Users/liyin/Documents/test/LightRAG/.venv/lib/python3.11/site-packages (2024.5.0)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# use fsspec to read the document\n",
     "!pip install fsspec"
@@ -843,8 +835,8 @@
    "source": [
     "# split the documents\n",
     "\n",
-    "from lightrag.components.data_process import DocumentSplitter\n",
-    "from lightrag.core.types import Document\n",
+    "from adalflow.components.data_process import DocumentSplitter\n",
+    "from adalflow.core.types import Document\n",
     "\n",
     "# sentence splitting is confusing, the length needs to be smaller\n",
     "metadata = {\"title\": \"Paul Graham's essay\", \"path\": \"data/paul_graham/paul_graham_essay.txt\"}\n",
@@ -1303,12 +1295,12 @@
     }
    ],
    "source": [
-    "from lightrag.components.retriever import LLMRetriever\n",
-    "from lightrag.components.model_client import OpenAIClient\n",
+    "from adalflow.components.retriever import LLMRetriever\n",
+    "from adalflow.components.model_client import OpenAIClient\n",
     "\n",
-    "from lightrag.tracing import trace_generator_call\n",
+    "from adalflow.tracing import trace_generator_call\n",
     "\n",
-    "from lightrag.utils import setup_env\n",
+    "from adalflow.utils import setup_env\n",
     "\n",
     "# 1. set up the tracing for failed call as the retriever has generator attribute\n",
     "\n",
@@ -1464,7 +1456,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# from lightrag.components.retriever import RerankerRetriever\n",
+    "# from adalflow.components.retriever import RerankerRetriever\n",
     "\n",
     "# query = \"Li\"\n",
     "# strings = [\"Li\", \"text2\"]\n",
@@ -1524,7 +1516,7 @@
     }
    ],
    "source": [
-    "from lightrag.core.db import LocalDB\n",
+    "from adalflow.core.db import LocalDB\n",
     "\n",
     "db = LocalDB()\n",
     "db.load_documents(documents)\n",
@@ -1622,7 +1614,7 @@
     }
    ],
    "source": [
-    "from lightrag.utils.config import new_components_from_config\n",
+    "from adalflow.utils.config import new_components_from_config\n",
     "\n",
     "components = new_components_from_config(data_transformer_config)\n",
     "print(components)"
@@ -1660,7 +1652,7 @@
     }
    ],
    "source": [
-    "from lightrag.core.component import Sequential\n",
+    "from adalflow.core.component import Sequential\n",
     "\n",
     "data_transformer = Sequential(components[\"document_splitter\"], components[\"to_embeddings\"])\n",
     "data_transformer"
@@ -2407,7 +2399,7 @@
    ],
    "source": [
     "\n",
-    "from lightrag.components.retriever import FAISSRetriever\n",
+    "from adalflow.components.retriever import FAISSRetriever\n",
     "\n",
     "\n",
     "\n",
@@ -2581,7 +2573,7 @@
     }
    ],
    "source": [
-    "from lightrag.components.retriever import BM25Retriever\n",
+    "from adalflow.components.retriever import BM25Retriever\n",
     "\n",
     "index_strings = [doc.text for doc in documents]\n",
     "\n",
@@ -2597,20 +2589,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'InMemoryBM25Retriever' object has no attribute 'retrieve'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[48], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m retriever \u001b[38;5;241m=\u001b[39m InMemoryBM25Retriever(top_k\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m)\n\u001b[1;32m      2\u001b[0m retriever\u001b[38;5;241m.\u001b[39mbuild_index_from_documents([\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mhello world\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mworld is beautiful\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtoday is a good day\u001b[39m\u001b[38;5;124m\"\u001b[39m])\n\u001b[0;32m----> 3\u001b[0m output \u001b[38;5;241m=\u001b[39m \u001b[43mretriever\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mretrieve\u001b[49m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mhello\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      4\u001b[0m output\n",
-      "File \u001b[0;32m~/Documents/test/LightRAG/lightrag/core/component.py:769\u001b[0m, in \u001b[0;36mComponent.__getattr__\u001b[0;34m(self, name)\u001b[0m\n\u001b[1;32m    766\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m name \u001b[38;5;129;01min\u001b[39;00m components:\n\u001b[1;32m    767\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m components[name]\n\u001b[0;32m--> 769\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mAttributeError\u001b[39;00m(\n\u001b[1;32m    770\u001b[0m     \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mtype\u001b[39m(\u001b[38;5;28mself\u001b[39m)\u001b[38;5;241m.\u001b[39m\u001b[38;5;18m__name__\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m object has no attribute \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mname\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    771\u001b[0m )\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'InMemoryBM25Retriever' object has no attribute 'retrieve'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "retriever = BM25Retriever(top_k=1)\n",
     "retriever.build_index_from_documents([\"hello world\", \"world is beautiful\", \"today is a good day\"])\n",
