refactor: add setup_env instead of using openai key in notebook

--- a/use_cases/question_answering/simple_qa.ipynb
+++ b/use_cases/question_answering/simple_qa.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,18 +27,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Here, we use the OpenAIClient as an example, but you can use any other clients (with the corresponding API Key as needed), such as AnthropicAPIClient\n",
-    "from adalflow.components.model_client import OpenAIClient\n",
-    "OPENAI_API_KEY=\"YOUR_API_KEY\" # Replace with your OpenAI API Key, or you can put it in a .env file"
+    "from adalflow.utils import setup_env # make sure you have a .env file with OPENAI_API_KEY or any other key mentioned with respect to your usage\n",
+    "setup_env(\".env\")\n",
+    "from adalflow.components.model_client import OpenAIClient"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -47,15 +48,20 @@
      "text": [
       "SimpleQA(\n",
       "  (generator): Generator(\n",
-      "    model_kwargs={'model': 'gpt-3.5-turbo'}, \n",
+      "    model_kwargs={'model': 'gpt-3.5-turbo'}, trainable_prompt_kwargs=[]\n",
       "    (prompt): Prompt(\n",
-      "      template: \n",
-      "      {% if task_desc_str or output_format_str or tools_str or examples_str or chat_history_str or context_str or steps_str %}\n",
-      "      <SYS>\n",
-      "      {% endif %}\n",
+      "      template: <START_OF_SYSTEM_PROMPT>\n",
       "      {# task desc #}\n",
       "      {% if task_desc_str %}\n",
       "      {{task_desc_str}}\n",
+      "      {% else %}\n",
+      "      You are a helpful assistant.\n",
+      "      {% endif %}\n",
+      "      {#input format#}\n",
+      "      {% if input_format_str %}\n",
+      "      <INPUT_FORMAT>\n",
+      "      {{input_format_str}}\n",
+      "      </INPUT_FORMAT>\n",
       "      {% endif %}\n",
       "      {# output format #}\n",
       "      {% if output_format_str %}\n",
@@ -87,27 +93,19 @@
       "      {{context_str}}\n",
       "      </CONTEXT>\n",
       "      {% endif %}\n",
+      "      <END_OF_SYSTEM_PROMPT>\n",
+      "      <START_OF_USER_PROMPT>\n",
+      "      {% if input_str %}\n",
+      "      {{input_str}}\n",
+      "      {% endif %}\n",
+      "      <END_OF_USER_PROMPT>\n",
       "      {# steps #}\n",
       "      {% if steps_str %}\n",
-      "      <STEPS>\n",
+      "      <START_OF_ASSISTANT_STEPS>\n",
       "      {{steps_str}}\n",
-      "      </STEPS>\n",
+      "      <END_OF_ASSISTANT_STEPS>\n",
       "      {% endif %}\n",
-      "      {% if task_desc_str or output_format_str or tools_str or examples_str or chat_history_str or context_str or steps_str %}\n",
-      "      </SYS>\n",
-      "      {% endif %}\n",
-      "      {% if input_str %}\n",
-      "      <Inputs>\n",
-      "      {{input_str}}\n",
-      "      </Inputs>\n",
-      "      {% endif %}\n",
-      "      {% if output_str %}\n",
-      "      <Outputs>\n",
-      "      {{output_str}}\n",
-      "      </Outputs>\n",
-      "      {% endif %}\n",
-      "      You:\n",
-      "      , prompt_variables: ['task_desc_str', 'steps_str', 'output_str', 'chat_history_str', 'tools_str', 'output_format_str', 'examples_str', 'context_str', 'input_str']\n",
+      "      , prompt_variables: ['output_format_str', 'tools_str', 'chat_history_str', 'context_str', 'input_str', 'examples_str', 'task_desc_str', 'input_format_str', 'steps_str']\n",
       "    )\n",
       "    (model_client): OpenAIClient()\n",
       "  )\n",
@@ -134,14 +132,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "GeneratorOutput(data='The capital of France is Paris.', error=None, usage=None, raw_response='The capital of France is Paris.')\n"
+      "GeneratorOutput(id=None, data='The capital of France is Paris.', error=None, usage=CompletionUsage(completion_tokens=7, prompt_tokens=48, total_tokens=55), raw_response='The capital of France is Paris.', metadata=None)\n"
      ]
     }
    ],
@@ -154,9 +152,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "lightrag-project",
+   "display_name": "openc",
    "language": "python",
-   "name": "light-rag-project"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -168,7 +166,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
