--- a/notebooks/qas/adalflow_object_count_auto_optimization.ipynb
+++ b/notebooks/qas/adalflow_object_count_auto_optimization.ipynb
@@ -847,9 +847,7 @@
         "    def prepare_eval(\n",
         "        self, sample: Example, y_pred: adal.GeneratorOutput\n",
         "    ) -> float:\n",
-        "        y_label = -1\n",
-        "        if y_pred is not None and y_pred.data is not None:\n",
-        "            y_label = y_pred.data\n",
+        "        y_label = y_pred.data # if y_pred is not None and y_pred.data is not None: y_label = y_pred.data might end up with bug\n",
         "        return self.eval_fn(y=y_label, y_gt=sample.answer)\n",
         "\n",
         "    def prepare_loss(self, sample: Example, pred: adal.Parameter):\n",
