fixed a nested data structured in dataclass parser, updated the dataclass tutorial and the notebook

--- a/notebooks/adalflow_colab_template.ipynb
+++ b/notebooks/adalflow_colab_template.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# 🤗 Welcome to AdalFlow!\n",
-    "## The PyTorch library to auto-optimize any LLM task pipelines\n",
+    "## The library to build & auto-optimize any LLM task pipelines\n",
     "\n",
     "Thanks for trying us out, we're here to provide you with the best LLM application development experience you can dream of 😊 any questions or concerns you may have, [come talk to us on discord,](https://discord.gg/ezzszrRZvT) we're always here to help! ⭐ <i>Star us on <a href=\"https://github.com/SylphAI-Inc/AdalFlow\">Github</a> </i> ⭐\n",
     "\n",
