--- a/notebooks/tutorials/adalflow_dataclasses.ipynb
+++ b/notebooks/tutorials/adalflow_dataclasses.ipynb
@@ -6,7 +6,7 @@
         "id": "hGLYrUwBmvUD"
       },
       "source": [
-        "<a target=\"_blank\" href=\"https://colab.research.google.com/github.com/SylphAI-Inc/AdalFlow/blob/main/notebooks/adalflow_dataclasses.ipynb\">\n",
+        "<a target=\"_blank\" href=\"https://colab.research.google.com/github.com/SylphAI-Inc/AdalFlow/blob/main/notebooks/tutorials/adalflow_dataclasses.ipynb\">\n",
         "  <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n",
         "</a>\n"
       ]
@@ -32,6 +32,10 @@
         "Deep dive on each API: check out the [developer notes](https://adalflow.sylph.ai/tutorials/index.html).\n",
         "\n",
         "Common use cases along with the auto-optimization:  check out [Use cases](https://adalflow.sylph.ai/use_cases/index.html).\n",
+        "\n",
+        "# Author\n",
+        "\n",
+        "This notebook was created by community contributor [Ajith](https://github.com/ajithvcoder).\n",
         "\n",
         "# Outline\n",
         "\n",
