update the template

--- a/notebooks/adalflow_colab_template.ipynb
+++ b/notebooks/adalflow_colab_template.ipynb
@@ -20,6 +20,10 @@
     "\n",
     "Common use cases along with the auto-optimization:  check out [Use cases](https://adalflow.sylph.ai/use_cases/index.html).\n",
     "\n",
+    "# Author\n",
+    "\n",
+    "This notebook was created by community contributor [Name](Replace_to_github_or_other_social_account).\n",
+    "\n",
     "# Outline\n",
     "\n",
     "This is a quick introduction of what AdalFlow is capable of. We will cover:\n",
