wrong colab link

--- a/notebooks/qas/adalflow_object_count_auto_optimization.ipynb
+++ b/notebooks/qas/adalflow_object_count_auto_optimization.ipynb
@@ -7,7 +7,7 @@
       },
       "source": [
         "# 🤗 Welcome to AdalFlow!\n",
-        "## The PyTorch library to auto-optimize any LLM task pipelines\n",
+        "## The library to build & auto-optimize any LLM task pipelines\n",
         "\n",
         "Thanks for trying us out, we're here to provide you with the best LLM application development experience you can dream of 😊 any questions or concerns you may have, [come talk to us on discord,](https://discord.gg/ezzszrRZvT) we're always here to help!\n",
         "\n",
