--- a/notebooks/qas/adalflow_object_count_auto_optimization.ipynb
+++ b/notebooks/qas/adalflow_object_count_auto_optimization.ipynb
@@ -844,13 +844,14 @@
         "    def prepare_task(self, sample: Example):\n",
         "        return self.task.call, {\"question\": sample.question, \"id\": sample.id}\n",
         "\n",
+        "\n",
         "    def prepare_eval(\n",
         "        self, sample: Example, y_pred: adal.GeneratorOutput\n",
         "    ) -> float:\n",
         "        y_label = -1\n",
-        "        if y_pred and y_pred.data:\n",
+        "        if y_pred is not None and y_pred.data is not None:\n",
         "            y_label = y_pred.data\n",
-        "        return self.eval_fn(y=y_label, y_gt=sample.answer)\n",
+        "        return self.eval_fn, {\"y\": y_label, \"y_gt\": sample.answer}\n",
         "\n",
         "    def prepare_loss(self, sample: Example, pred: adal.Parameter):\n",
         "        # prepare gt parameter\n",
